--- a/theory/IGD_CFT_1p1_v1.0.tex
+++ b/theory/IGD_CFT_1p1_v1.0.tex
@@ -98,6 +98,49 @@ spatially separated regions display light-cone structures: correlations
 become appreciable only when signals traveling at speed $v$ have had
 time to connect the regions.
 
+\section{Critical spin chains and TFIM mapping}
+\label{sec:cft_tfim_mapping}
+
+A particularly important realisation of 1+1D CFT entanglement physics
+arises in the scaling limit of critical spin chains. The transverse--field
+Ising model (TFIM) at its quantum critical point $h=J$ flows in the
+infrared to the Ising CFT with central charge $c=\tfrac{1}{2}$. In
+this limit:
+
+\begin{itemize}
+  \item the lattice spacing $a$ sets the ultraviolet cutoff in the
+        CFT expressions for $S_A(\ell)$;
+  \item the velocity of low-energy excitations coincides with the
+        effective information velocity $\vIGD$ extracted from the
+        microscopic TFIM dispersion relation at criticality;
+  \item block entropies $S_A(\ell)$ for the TFIM ground state approach
+        the CFT logarithmic scaling forms when $\ell$ is large
+        compared to the lattice scale but small compared to the system
+        size.
+\end{itemize}
+
+From the IGD perspective, the critical point corresponds to a regime
+where the information correlation length $\xiIGD$ diverges and the
+simple gapped-area-law picture (T1) is replaced by the scale-invariant
+logarithmic behaviour characteristic of CFTs. The same axiomatic
+framework (A0--A10) applies, but the effective focus manifolds and
+information geometry are controlled by conformal symmetry rather than
+by a finite correlation length.
+
+It is natural in this context to consider information metrics on
+families of CFT states parametrised by, for example, a temperature
+$T$ or a mass deformation away from criticality. Small variations in
+such parameters induce distinguishable changes in reduced density
+matrices, and the corresponding Bures (or Fisher) metrics encode how
+``far'' one is from the critical fixed point in an IGD sense.
+
+The modular Hamiltonian for an interval in the CFT vacuum provides
+another bridge to the spacetime theorems: its local form in Rindler
+coordinates underlies entanglement-thermodynamic arguments of the type
+used in the T2 programme (Einstein equations as equations of state).
+In the present v1.0 note we only sketch these connections; future work
+will develop a more explicit IGD treatment of modular flow in CFTs.
+
 \section{IGD interpretation}
 \label{sec:cft_igd}
 
